#14 added dark mode for more components, trying to make sure everything is readable (some text still stays black in dark mode)

--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -6,6 +6,6 @@ div.content {
     border-radius: 10px;
     padding: 2rem;
     left: 50%;
-    background-color: white;
+    background-color: black;
     overflow: auto;
 }
