--- a/client/src/app/pages/settings/settings.component.scss
+++ b/client/src/app/pages/settings/settings.component.scss
@@ -38,3 +38,8 @@
         }
     }
 }
+.bg-container-dark {
+    background-color: #0a0315;
+    color: whitesmoke;
+}
+
